<resources>
    <string name="app_name">BullionTestCase</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_bei">Logo BEI</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="add_new_users">Add New Users</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="password_desc">Min 8 Char | Min 1 Capital and Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="make_sure_the_password_matches">Make sure the password matches</string>
    <string name="add_users">Add Users</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="edit_user">Edit User</string>
    <string name="update_user">Update User</string>
</resources>