<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="8dp"
    card_view:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/photo_profile"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_account_24" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            tools:layout_constraintStart_toEndOf="@+id/img_item_photo"
            tools:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:layout_constraintStart_toStartOf="@+id/tv_item_name"
            tools:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/email_address" />

        <TextView
            android:id="@+id/tv_item_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintEnd_toEndOf="parent"
            tools:layout_constraintTop_toTopOf="parent"
            android:text="@string/date_of_birth" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>